SCSS more application specific/ Fixed form alignment

--- a/src/css/app.scss
+++ b/src/css/app.scss
@@ -1,9 +1,12 @@
-//GENERAL
+///////////
+//GENERAL//
+///////////
 body{
   font-family:sans-serif;
 }
-
-//GRID LAYOUT
+///////////////
+//GRID LAYOUT//
+///////////////
 .grid-container {
   display: grid;
   grid-template-columns: auto auto;
@@ -12,7 +15,6 @@ body{
   grid-gap: 10px;
   padding: 10px;
 }
-
 .grid-container > div {
   background-color: rgba(255, 255, 255, 0.8);
   text-align: center;
@@ -22,17 +24,23 @@ body{
 .item {
   border:  1px solid black; 
 }
-
+//For a 2 column layout where an element requires the full width
+.detaildiv {
+  grid-column: span 2; 
+}
+//Application specific for layout 
 .tall {
   grid-column: 1 / 2;
   grid-row: 1 / 3;
 }
-
-.detaildiv {
-  grid-column: span 2; 
+.wide {
+  grid-column: 1 / 3;
+  grid-row: 3 / 4;
 }
 
-//FORM LAYOUT
+///////////////
+//FORM LAYOUT//
+///////////////
 .submission-form{
   max-width:500px;
   margin:2rem auto;
@@ -48,7 +56,7 @@ label{
 }
 input, textarea{
     display:block;
-    width:100%;
+    width:calc(100% - 20px);;
     border:2px solid #2980B9;
     padding:.5rem;
     font-size:18px;
@@ -71,31 +79,10 @@ input, textarea{
   }
 }
 
-//Pagination menu
-ul.pagination {
-  display: inline-block;
-  padding: 0;
-  margin: 0;
-  cursor:pointer;
-}
-
-ul.pagination li {display: inline;}
-
-ul.pagination li a {
-  
-  float: left;
-  padding: 8px 16px;
-  text-decoration: none;
-  border-radius: 5px;
-}
-ul.pagination li a.active{ background-color:black;  color: white; }
-ul.pagination li a.dormant{ background-color:white; color: black; }
-ul.pagination li a.normal{ border-style: solid;border-width: thin;}
-
-
-ul.pagination li a:hover:not(.active) {background-color: #ddd;}
-
-//Misselaneous
+/////////////////
+//Miscellaneous//
+/////////////////
+//Classes for error messages
 .smallMessages
 {
   font-size: 10px;
